upgrade : cssで見た目を実装
cssでリストの見た目を実装しました。

--- a/src/style.css
+++ b/src/style.css
@@ -81,4 +81,9 @@ button:focus-visible {
 body {
   color: #333;
   letter-spacing: 0.04em;
+  line-height: 1.75;
+}
+
+h1,h2 {
+  line-height: 1.5;
 }
